[package]
name = "kindling"
version = "0.1.1"
edition = "2021"
authors = ["Lily Mara"]
description = "Framework for building e-ink smart displays with Kindles"
readme = "README.md"
repository = "https://github.com/lily-mara/kindling"
license = "MIT"

[dependencies]
axum = "0.7"
chrono = { version = "0.4.26", features = ["serde"] }
eyre = "0.6.8"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
serde_path_to_error = "0.1.14"
skia-safe = "0.73.0"
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"


[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
smol_egui_skia = "0.1.1"
egui = "0.27.2"
